...
                    .presentationCornerRadius(15)
            }
            .sheet(isPresented: $infoTapped, onDismiss: {isPresenting = false}) {
                InfoReviewView(isPresented: $infoTapped)
                    .presentationDetents([.fraction(0.75)])
                    .presentationCornerRadius(15)
                    .overlay(Color.clear.accessibilityIdentifier("infoReviewView"))
            }
            .onAppear(){
                isPresenting = false
                Task {
                    viewModel.getUserReview(userID: users.first?.userID ?? -1)
                }
...
                .font(.system(size: 80))
                .foregroundColor(.blue)
            Text(viewModel.selectedCity.cityName + ", " + viewModel.selectedCity.countryName)
                .font(.system(size: 32).bold())
                .padding(.horizontal)
                .fontWeight(.semibold)
                .accessibilityIdentifier("selecteCityTitle")
            Spacer()
        }
    }
}

private struct ReviewsAverageView: View {
...
                            infoTapped = true
                        }
                    }){
                        Image(systemName: "info.circle")
                            .font(.title3)
                    }
                    .accessibilityIdentifier("infoReviewButton")
                }
                
                HStack {
                    VStack (spacing: 10) {
                        HStack {
                            Text(String(format: "%.1f", selectedCityReviewElement.getAverageRating()))
...
                        RatingBarRow(symbolName: "tree", rating: selectedCityReviewElement.averageGreenSpacesRating)
                        RatingBarRow(symbolName: "trash", rating: selectedCityReviewElement.averageWasteBinsRating)
                    }
                    .padding(.leading, 30)
                }
            }
            .overlay(Color.clear.accessibilityIdentifier("averageRatingSection"))
            
        } else {
            // iPadOS
            
            VStack(spacing: 0) {
                HStack {
...
            if !selectedCityReviewElement.reviews.isEmpty {
                Text("Latest Reviews")
                    .font(.title)
                    .fontWeight(.semibold)
                    .padding(.horizontal, 20)
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .accessibilityIdentifier("latestReviewsTitle")
                
                // latest reviews
                if horizontalSizeClass == .compact {
                    CarouselView(reviews: selectedCityReviewElement.getFirstReviews(num: 5))
                        .frame(height: 250)
                } else {
...
                    Text("See all reviews")
                        .foregroundStyle(AppColors.mainColor)
                        .fontWeight(.semibold)
                        .padding(10)
                }
                .padding()
                .accessibilityIdentifier("allReviewsButton")
            }
            else {
                Text("There are no reviews yet for " + viewModel.selectedCity.cityName + ", " + viewModel.selectedCity.countryName + ".")
                    .font(.system(size: 15))
                    .fontWeight(.light)
                    .padding(.top, 40)
                    .accessibilityIdentifier("noReviewsText")
            }
        }
        .padding(.top, 5)
    }
}

...
            Button(action: {
                isPresented = false
            }) {
                Text("Done")
                    .fontWeight(.bold)
            }
            .accessibilityIdentifier("infoReviewCloseButton")
        }
        .padding(.top)
        .padding(.horizontal)
        
        ScrollView {
            VStack {
...
                .padding(.bottom, 5)
                Text("This rating measures the presence of recycling bins and the overall cleanliness of the city. A well-maintained urban environment contributes to a greener and more pleasant place to live and visit.")
                    .frame(maxWidth: .infinity, alignment: .leading)
            }
            .padding(.bottom)
            .padding(.horizontal)
            .overlay(Color.clear.accessibilityIdentifier("infoReviewContent"))
        }
    }
}

private struct RatingBarRow: View {
    let symbolName: String
...
