...
                                editTapped = true
                            }) {
                                Text("Edit")
                                    .font(.headline)
                                    .padding(.top, 20)
                            }
                            .accessibilityIdentifier("editButton")
                        }
                        
                        Spacer()
                        
                        Button(action: {
                            isPresenting = false
                            isPresented = false
                        }) {
                            Text("Cancel")
                                .font(.headline)
                                .padding(.top, 20)
                        }
                        .accessibilityIdentifier("cancelButton")
                    }
                    .padding(.horizontal, 5)
                }
                
                VStack {
                    Text(viewModel.userReview != nil ? "Your review" : "Leave a review")
                        .font(.system(size: 25).bold())
                        .accessibilityIdentifier("personalReviewTitle")
                    
                    
                    VStack {
                        ReviewStarRating(icon: "bus", color: colorScheme == .dark ? Color.white : Color.black, rating: $viewModel.localTransportRating, editTapped: (editTapped || (viewModel.userReview == nil )))
                        ReviewStarRating(icon: "tree",color:  colorScheme == .dark ? Color.white : Color.black, rating: $viewModel.greenSpacesRating, editTapped: (editTapped || (viewModel.userReview == nil )))
                        ReviewStarRating(icon: "trash", color:  colorScheme == .dark ? Color.white : Color.black, rating: $viewModel.wasteBinsRating, editTapped: (editTapped || (viewModel.userReview == nil )))
                    }
                    .overlay(Color.clear.accessibilityIdentifier("userRatings"))
                }
                .background(Color.clear.contentShape(Rectangle()).accessibilityIdentifier("overlayRating"))
                
                VStack {
                    TextField("Leave a review...", text: $viewModel.reviewText , axis: .vertical)
                        .padding()
                        .lineLimit(8, reservesSpace: true)
                        .focused($isFocused)
                        .background(colorScheme == .dark ? AppColors.blockColorDark: Color(.systemGray6))
                        .cornerRadius(10)
                        .disabled(!editTapped && viewModel.userReview != nil)
                        .accessibilityIdentifier("userText")
                }
                .padding(10)
                
                Spacer()
                
                //save review button
...
                            .padding(10)
                            .foregroundColor(.white)
                    }
                    .fixedSize()
                }
                .disabled((viewModel.reviewText.isEmpty) || (viewModel.greenSpacesRating == 0) || (viewModel.localTransportRating == 0) || (viewModel.wasteBinsRating == 0))
                .accessibilityIdentifier("saveButton")
                
                Spacer()
                //delete button
                if viewModel.userReview != nil {
                    Button(action: {
                        showAlert = true
...
                                Task {
                                    await viewModel.deleteReview()
                                }
                            }
                        )
                    }
                    .accessibilityIdentifier("deleteButton")
                }
            }
            .padding(.horizontal, 15)
        }
        .onAppear() {
            viewModel.reviewText = viewModel.userReview?.reviewText ?? ""
...
