...
                                }
                                .padding(10)
                            }
                            .fixedSize()
                        }
                        .padding(.horizontal)
                        .accessibilityIdentifier("addReviewButton")
                    }
                }
            } else {
                if let userReview = viewModel.userReview {
                    ZStack{
                        RoundedRectangle(cornerRadius: 20)
...
                            .shadow(color: .blue.opacity(0.3), radius: 5, x: 0, y: 3)
                        VStack {
                            HStack {
                                Text("Your review")
                                    .font(.title3)
                                    .fontWeight(.semibold)
                                    .accessibilityIdentifier("yourReviewTitle")
                                
                                Spacer()
                                
                                FiveStarView(rating: userReview.computeRating(), dim: 20, color: .green.opacity(0.8))
                                    .overlay(Color.clear.accessibilityIdentifier("userReviewRating"))
                                
                                Spacer()
                                Spacer()
                                Spacer()
                            }
                            
                            Text(userReview.reviewText)
                                .frame(maxWidth: .infinity, alignment: .leading)
                                .accessibilityIdentifier("userReviewText")
                            
                            Spacer()
                        }
                        .padding()
                    }
                    .onTapGesture() {
...
